Adicionar módulo de retiradas de materiais por cidade
